--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ zhihu: errstack
 twitter: jiaozhu
 v2ex: jiaozhu
 
-url: https://tw93.fun
+url: https://jiaozhu.net
 menu:
   - title: "Categories"
     url: "/categories.html"
